Fix iOS home bar overlapping tab bar

--- a/rogue-thi-app/styles/AppTabbar.module.css
+++ b/rogue-thi-app/styles/AppTabbar.module.css
@@ -1,5 +1,6 @@
 .navbar {
-  padding: 0;
+  /* prevent iOS home bar from overlapping tab bar */
+  padding: 0 0 env(safe-area-inset-bottom, 0px) 0;
   background: white;
   border-top: 1px solid #eeeeee;
   box-shadow: 0px 0px 3px rgba(0, 0, 0, 0.1);
@@ -15,7 +16,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  font-size: 9pt;
+  font-size: 8pt;
   color: #444444 !important;
 }
 
